@@ -41,5 +41,5 @@ user_encoding = locale.getpreferredencoding()
 
 __copyright__ = "Copyright 2005 Canonical Development Ltd."
 __author__ = "Martin Pool <mbp@canonical.com>"
-__version__ = '0.0.4'
+__version__ = '0.0.5pre'
 
